# QuizApp

./: .env  .env.example  pyproject.toml
quizapp/: dependencies.py  main.py
quizapp/api/errors/: http_error.py  validation_error.py
quizapp/api/routes/: api.py
quizapp/api/routes/quiz/: option.py  question.py  quiz.py
quizapp/api/routes/users/: api.py  users.py
quizapp/core/: config.py  events.py
quizapp/db/: events.py
quizapp/models/: Common.py
quizapp/models/quiz/: Option.py  Question.py  Quiz.py
quizapp/models/users/: User.py  jwt.py
quizapp/services/: authentication.py  jwt.py
tests/: test_quizapp.py
